--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
 <resources>
     <dimen name="button_main_inset_vertical_size_xsmall">10dp</dimen>
     <dimen name="text_size_strings_normal">20sp</dimen>
+    <dimen name="dialog_fragment_configure_parking_lots_margin_size_small">20dp</dimen>
+    <dimen name="dialog_fragment_configure_parking_lots_padding_size_xsmall">10dp</dimen>
+    <dimen name="dialog_fragment_configure_parking_lots_layout_height_xxbig">200dp</dimen>
 </resources>
