--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,5 +19,13 @@
         android:insetTop="@dimen/button_main_inset_vertical_size_xsmall"
         android:insetBottom="@dimen/button_main_inset_vertical_size_xsmall"
         android:text="@string/main_activity_button_set_parking" />
+
+    <Button
+        android:id="@+id/button_main_new_reservation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:insetTop="@dimen/button_main_inset_vertical_size_xsmall"
+        android:insetBottom="@dimen/button_main_inset_vertical_size_xsmall"
+        android:text="@string/main_activity_btn_new_reservation" />
 </LinearLayout>
 
